cleaning up test data

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="mobile-web-app-capable" content="yes">
 
-  <title>React.js Boilerplate</title>
+  <title>Click Loans React Test</title>
 </head>
 <body>
 <!-- The app hooks into this div -->
